--- a/app/home.module.css
+++ b/app/home.module.css
@@ -13,7 +13,7 @@
     font-size: 36px;
     font-weight: 700;
     color: #1a1a1a;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     text-align: center;
 }
 
@@ -21,4 +21,12 @@
     font-size: 18px;
     color: #444444;
     line-height: 28px;
-    margin-bottom: 16px; }
+    margin-bottom: 10px; 
+    text-align: center;
+}
+.searchResult {
+    font-size: 16px;
+    text-align: center;
+    margin: 16px 0 32px;
+    color: #333;
+}
