--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,23 +3,31 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #333;
+    background-color: #A0C49D;
+    /* глибокий синьо-зелений */
     color: white;
+    border-bottom: 2px solid #2d6e74;
+    box-shadow: 0 2px 6px rgba(165, 220, 176, 0.674);
 }
 
 .header a {
     text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
+    color: rgb(14, 11, 11);
+    font-size: 28px;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 6px 12px;
+    border-radius: 6px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .header a:hover {
-    color: #ddd;
+    background-color: #3A7733;
+    color: #f0fdfd;
 }
 
 .navigation {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
@@ -28,9 +36,14 @@
 
 .navigation li a {
     text-decoration: none;
-    color: white;
-    font-size: 1rem;
+    color: rgb(14, 11, 11);;
+    font-size: 18px;
+    padding: 6px 12px;
+    border-radius: 6px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .navigation li a:hover {
-    color: #ddd; }
+    background-color: #3A7733;
+    color: #f0fdfd;
+}
