--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -1,3 +1,20 @@
+.button {
+    padding: 10px 16px;
+    font-size: 16px;
+    background-color: #2f855a;
+    /* насичений зелений */
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #38a169;
+    /* трохи світліший зелений при ховері */
+}
+
 .pagination {
     display: flex;
     justify-content: center;
@@ -9,6 +26,7 @@
 }
 
 .pagination li {
+   margin-top: 16px;
     border: 1px solid #dee2e6;
     border-radius: 4px;
     cursor: pointer;
@@ -24,23 +42,28 @@
     width: 100%;
     height: 100%;
     text-decoration: none;
-    color: #0d6efd;
+    color: #2f855a;
+    /* замість синього - зелений */
     font-size: 14px;
 }
 
 .pagination li:hover {
     background-color: #e9ecef;
+    border: 2px solid #2f855a;
 }
 
 .pagination li.active:hover {
-    background-color: #0d6efd;
+    background-color: #38a169;
+    /* зелений при hover на активній */
 }
 
 .active {
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #2f855a;
+    /* насичений зелений */
+    border-color: #2f855a;
 }
 
 .active a {
     color: #fff !important;
-    font-weight: 500; }
+    font-weight: 500;
+}
