--- a/components/SearchBox/SearchBox.module.css
+++ b/components/SearchBox/SearchBox.module.css
@@ -1,7 +1,43 @@
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 40px;
+    /* Відступ від хедера */
+}
+
 .input {
-    flex: 1;
-    max-width: 240px;
-    padding: 6px 12px;
+    padding: 10px 14px;
     font-size: 16px;
-    border: 1px solid #ced4da;
-    border-radius: 4px; }
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    outline: none;
+    width: 260px;
+    transition: border-color 0.3s;
+}
+.input:hover {
+    background-color: white;
+    border: 2px solid #2f855a;
+}
+
+.input:focus {
+    border-color: #2f855a;
+}
+
+.button {
+    padding: 10px 16px;
+    font-size: 16px;
+    background-color: #2f855a;
+    /* насичений зелений */
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #38a169;
+    /* трохи світліший зелений при ховері */
+}
